# 3d-graphics-programming-study

./: .gitignore  CMakeLists.txt  Readme.md  package.json
src/: display.c  display.h  main.c  vector.c  vector.h
src/images/progress/: progress-template.psd
src/lib/: camera.c  camera.h  display.c  display.h  mesh.c  mesh.h  projection.c  projection.h  transform.c  transform.h  triangle.c  triangle.h  vector.c  vector.h
src/meshes/: cube.c  cube.h
